    build type. LP: #655277
  * Fix finding upstream tarball when get-orig-source is not available.
    Closes: #552893
  * merge-upstream now looks at the package source format to see what
    kind of compression is supported on tarballs. LP: #627718
  * Support upstream version strings containing dashes. Patch by Stefano
    Rivera. LP: #711826

 -- Jelmer Vernooij <jelmer@debian.org>  Thu, 03 Feb 2011 11:36:59 +0100

bzr-builddeb (2.5) unstable; urgency=low

  [ Colin Watson ]
  * Consider a .dsc without a Format: to be Format: 1.0.

  [ Jelmer Vernooij ]
  * export now uses the timestamp of the last revision, making them more
    deterministic, and so hopefully producing the same tarballs when it is
    used for that.
  * Fix use of getattr to have 3 arguments to avoid exception. (LP: #572093)
  * Implement the automatic_tag_name hook so that "bzr tag" with no arguments
    will tag based on the version in debian/changelog.
  * Support upstream/VERSION tags, for compatibility with git-
    buildpackage. LP: #551362
  * Support upstream tarballs without a pristine tar delta.
  * Support -r argument to import-upstream.

  [ Robert Collins ]
  * Add import-upstream command which imports an upstream - useful for
    migrating existing packaging branches into pristine-tar using mode.
  * Stop stripping .bzrignore from tarball imports. LP: #496907
  * Make the upstream branch authoritative for file ids when importing a
    tarball, stopping errors when files are renamed. LP: #588060

  [ James Westby ]
  * Add a --package-merge option to builddeb to build with the -v and -sa
    appropriate when doing a merge from Debian or similar. LP: #576027
  * Fixed a logic error that stops -r working in merge-upstream. LP: #594575

  [ Jelmer Vernooij ]
  * Determine Bazaar home directory using bzrlib to prevent test
    isolation issues. Closes: #614125
  * Bump standards version to 3.9.1 (no changes).

 -- Jelmer Vernooij <jelmer@debian.org>  Wed, 11 Aug 2010 18:23:54 +0200
